--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <title>Carbumotos</title>
-</head>617
-882
+</head>
 <body>
     <header class="barra">
         <div class="circulo" ><img class="logo" src="img/logo.png" alt="Logo da Moto Certa"></div>
